@@ -1,5 +1,5 @@
 TinyMUX 2.6:  CHANGES
-Last Update:  September 2007
+Last Update:  October 2007
 
 Major changes that may affect performance and require softcode tweaks:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -303,6 +303,8 @@ Bug Fixes:
     was given without a list of permissions.
  -- The power_alias and flag_alias configuration handlers would
     SIGSEGV if flagname and alias were not both given.
+ -- If guest_char was a THING instead of a PLAYER, copying the flagset
+    of the guest_char wiped the object type (Issue 390).
 
 
 Performance Enhancements:
